force-app/main/default/objects/Case/fields/AI_Clarification_Pending__c.field-meta.xml
<CustomField>
    <fullName>AI_Clarification_Pending__c</fullName>
    <description>True while the case is awaiting question clarification. CaseAIAgentTrigger skips AI resolution on insert when this is true. CaseConfirmTrigger clears it to false on confirmation, which fires the AI resolution.</description>
    <defaultValue>false</defaultValue>
    <label>AI Clarification Pending</label>
    <type>Checkbox</type>
</CustomField>