force-app/main/default/objects/Case/fields/KB_Article_Link__c.field-meta.xml
<CustomField>
    <fullName>KB_Article_Link__c</fullName>
    <description>Direct link to the Knowledge article that was created or updated by the KB Article Builder Action. Written automatically after each case resolution.</description>
    <label>KB Article Link</label>
    <type>Url</type>
</CustomField>