force-app/main/default/objects/Case/fields/KB_Candidates__c.field-meta.xml
<CustomField>
    <fullName>KB_Candidates__c</fullName>
    <description>Dual-purpose staging field. SKIP path: written by KbMatchAgentService with the KB Update Scope analysis (why the resolve agent missed the article, whether it needs updating, and what to add). CREATE path: passed as a merge field to the GPTfy KB Creation Prompt (will be blank on the create path so the prompt creates from case description alone).</description>
    <label>KB Update Scope</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>